force-app/main/default/objects/Match__c/fields/AwayScore__c.field-meta.xml
<CustomField>
    <fullName>AwayScore__c</fullName>
    <label>Away Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>