force-app/main/default/objects/Match__c/fields/AwayTeam__c.field-meta.xml
<CustomField>
    <fullName>AwayTeam__c</fullName>
    <label>Away Team</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>