force-app/main/default/objects/Match__c/fields/DataSource__c.field-meta.xml
<CustomField>
    <fullName>DataSource__c</fullName>
    <label>Data Source</label>
    <referenceTo>DataSource__c</referenceTo>
    <relationshipLabel>Matches</relationshipLabel>
    <relationshipName>Matches</relationshipName>
    <type>Lookup</type>
</CustomField>