force-app/main/default/objects/Match__c/fields/ExternalId__c.field-meta.xml
<CustomField>
    <description>Identifiant externe unique du match.</description>
    <externalId>true</externalId>
    <fullName>ExternalId__c</fullName>
    <label>External ID</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>