force-app/main/default/objects/Match__c/fields/HomeScore__c.field-meta.xml
<CustomField>
    <fullName>HomeScore__c</fullName>
    <label>Home Score</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>