force-app/main/default/objects/Match__c/fields/HomeTeam__c.field-meta.xml
<CustomField>
    <fullName>HomeTeam__c</fullName>
    <label>Home Team</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>