force-app/main/default/objects/Match__c/fields/MatchDate__c.field-meta.xml
<CustomField>
    <fullName>MatchDate__c</fullName>
    <label>Match Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>