force-app/main/default/objects/Match__c/fields/RawPayload__c.field-meta.xml
<CustomField>
    <description>Payload brut du match pour audit et reprocessing.</description>
    <fullName>RawPayload__c</fullName>
    <label>Raw Payload</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>